src/test/ui/resolve/unresolved_static_type_field.stderr
error[E0425]: cannot find value `cx` in this scope
  --> $DIR/unresolved_static_type_field.rs:9:11
   |
LL |         f(cx);
   |           ^^
   |           |
   |           `self` value is a keyword only available in methods with `self` parameter
   |           help: try: `self.cx`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
